fix: handle old documents alignment in publish page

--- a/styles/clasor-preview.style.css
+++ b/styles/clasor-preview.style.css
@@ -14,4 +14,16 @@
   @apply !h-[calc(100vh-200px)];
 }
 
+.clasor-preview-content__render-server-content *:not(.clasor-editor-content *):not([style*="text-align"]) {
+  direction: rtl;
+}
 
+/* All elements inside clasor-editor-content and without inline text-align get LTR */
+.clasor-preview-content__render-server-content .clasor-editor-content *:not([style*="text-align"]) {
+  direction: ltr;
+}
+
+/* Elements with inline text-align maintain their own alignment */
+.clasor-preview-content__render-server-content [style*="text-align"] {
+  direction: inherit;
+}
